[package]
name = "rmesg"
version = "1.0.21"
authors = ["Archis Gore <me@archisgore.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["os", "command-line-utilities"]
keywords = ["dmesg", "klogctl", "printk", "syslog"]
readme = "README.md"
description = """This is a starlab customized fork of a Rust-based implementation of the popular
dmesg Linux utility, giving programmatic access to the kernel log buffer."""

[lib]
name = "rmesg"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
cfg-if = "1.0.0"
errno = "0.3.3"
lazy_static = "1.4.0"
regex = "1.5.4"
strum = "0.25"
strum_macros = "0.25"
num = "0.4"
num-traits = "0.2"
num-derive = "0.4"
nonblock = "0.2"

[profile.dev]
# We don't need stack unwinding in dev either - can be manually enabled
panic = 'abort'

[profile.release]
# We don't need stack unwinding in releases
panic = 'abort'
# Enable LTO for release (since it only builds in Travis and doesn't block day to day)
lto = "fat"
# One code-gen unit so we get a highly optimized binary
codegen-units = 1

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

